--- a/messages.yml
+++ b/messages.yml
@@ -100,6 +100,12 @@ admin_modify_error:
   fr: Erreur lors de l\'application des modifications.
   it: Errore mentre si applicavano le modifiche
   gl: Erro aplicando as modificacións
+admin_must_login:
+  de: Anmeldung benötigt
+  en: Login required
+admin_must_login_expl:
+  de: "Wenn eingeschaltet können nur angemeldete Benutzer auf die Bibliothek zugreifen"
+  en: "If switched on only logged in users can access the library"
 admin_new_version:
   de: Die neue Version %s ist verfügbar. Sie haben Version %s
   en: New version %s is available, you have %s
