Added cookie path handling via Aura\Session to enable multiple instances on the same server with login, fixes #173.
By default session cookies used the "/" path. With multiple instances on the same server this meant that a session was valid for all instances on this server. The new session handling uses the instance path, e.g. .../bbs, to  qualify a session cookie for only this instance.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     	"slim/views": "0.1.2",
     	"swiftmailer/swiftmailer": "5.0.1",
       "twig/twig": "1.16.0",
-      "aura/auth": "2.0.0-beta2",
+	  "aura/auth": "2.x-dev",
       "aura/session": "2.0.1",
       "ircmaxell/password-compat": "v1.0.4"
   	},
