Changed bad parameter tests for id templates, fixes issue #200
The API for id templates checked for numeric ids instead of
strings, the template names. Changed the checks to look for
strings.

Added UI tests for id templates and links.

--- a/tests/env/tmux.conf
+++ b/tests/env/tmux.conf
@@ -2,3 +2,5 @@ set -g prefix C-a
 unbind C-b
 set -g base-index 1
 # setw -g pane-base-index 1
+# switch off date&time display
+set -g status-right "#S #I:#P"
