Adds admin switch for the generation of relative or absolute URLs, see #209
By default the app now generates relative URLs for HTML and OPDS. These
should be compatible with proxies and gateways. This behaviour can be changed
 with the new "relative urls" switch in the configuration menu. If absolute URLs are required by devices, proxies and gateways can modify these by specifiying forwarding headers (Forwarded, X-Forwarded-Host, X-Forwarded-Proto).

--- a/messages.yml
+++ b/messages.yml
@@ -1317,6 +1317,12 @@ published:
   nl: Gepubliceerd
   it: Pubblicato
   gl: Publicado
+relative_urls:
+  de: Relative URLs
+  en: Relative URLs
+relative_urls_expl:
+  de: Schalten Sie dies ab, wenn zB ihr OPDS-Reader vollständige URLs benötigt
+  en: Switch this off, if your OPDS reader requires full URLs
 save:
   hu: Mentés
   de: Speichern
