--- a/messages.yml
+++ b/messages.yml
@@ -172,7 +172,7 @@ admin_pw_expl:
   hu: ! 'Opcionális: Adjon meg egy jelszót, hogy idegenek ne férhessenek hozzá az admin felülethez'
   de: "Optional: Tragen sie hier ein Passwort ein, um den Zugang zu den Admin-Einstellungen einzuschränken."
   en: "Optional: Enter a password to protect the admin page from changes by others."
-  fr: "Optionel: entrez un mot de passe administrateur pour contrôler l\'accès à la configuration"
+  fr: "Optionel: entrez un mot de passe administrateur pour contrôler l\\'accès à la configuration"
   nl: "Optioneel: Voer een wachtwoord in om de admin pagina te beschermen tegen wijzigingen door anderen"
   it: "Opzionale: Inserire una password per prevenire modifiche da parte di terzi della pagina di amministrazione"
   gl: "Opcional: Introduce un contrasinal para controlar o acceso á configuración"
@@ -217,7 +217,7 @@ admin_mailer_expl:
   hu: "Válassz egy email küldési lehetőséget, ha szeretnél levélben könyvet küldeni. SMTP beállítások szükségesek hozzá: "
   de: "Wählen sie die Versandart, falls sie Bücher per Mail versenden möchten. Für SMTP sind weitere Einstellungen nötig: "
   en: "Select the mail transport mechanism, if you want to send books via mail. SMTP needs further configuration: "
-  fr: "Selectionnez la méthode d\'envoi des e-mails, si vous souhaitez envoyer vos livres par e-mail. Le SMTP doit être configuré : "
+  fr: "Selectionnez la méthode d\\'envoi des e-mails, si vous souhaitez envoyer vos livres par e-mail. Le SMTP doit être configuré : "
   it: "Selezionare il metodo di invio posta elettronica, se si vogliono inviare libri per posta elettronica. SMTP richiede ulteriori configurazione: "
   gl: "Selecciona o método de envio de correos se desexas enviar libros por correo. O servizo SMTP necesita configuración: "
 admin_mailer_smtp:
@@ -259,7 +259,7 @@ admin_role:
   hu: Funkció
   de: Rolle
   en: Role
-  fr:Rôle
+  fr: Rôle
 admin_role_admin:
   hu: Admin
   de: Admin
